; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_date.c_day_from_month.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_date.c_day_from_month.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @day_from_month to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @day_from_month(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %36 [
    i32 0, label %7
    i32 1, label %8
    i32 2, label %9
    i32 3, label %12
    i32 4, label %15
    i32 5, label %18
    i32 6, label %21
    i32 7, label %24
    i32 8, label %27
    i32 9, label %30
    i32 10, label %33
  ]

7:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %39

8:                                                ; preds = %2
  store i32 31, i32* %3, align 4
  br label %39

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = add nsw i32 59, %10
  store i32 %11, i32* %3, align 4
  br label %39

12:                                               ; preds = %2
  %13 = load i32, i32* %5, align 4
  %14 = add nsw i32 90, %13
  store i32 %14, i32* %3, align 4
  br label %39

15:                                               ; preds = %2
  %16 = load i32, i32* %5, align 4
  %17 = add nsw i32 120, %16
  store i32 %17, i32* %3, align 4
  br label %39

18:                                               ; preds = %2
  %19 = load i32, i32* %5, align 4
  %20 = add nsw i32 151, %19
  store i32 %20, i32* %3, align 4
  br label %39

21:                                               ; preds = %2
  %22 = load i32, i32* %5, align 4
  %23 = add nsw i32 181, %22
  store i32 %23, i32* %3, align 4
  br label %39

24:                                               ; preds = %2
  %25 = load i32, i32* %5, align 4
  %26 = add nsw i32 212, %25
  store i32 %26, i32* %3, align 4
  br label %39

27:                                               ; preds = %2
  %28 = load i32, i32* %5, align 4
  %29 = add nsw i32 243, %28
  store i32 %29, i32* %3, align 4
  br label %39

30:                                               ; preds = %2
  %31 = load i32, i32* %5, align 4
  %32 = add nsw i32 273, %31
  store i32 %32, i32* %3, align 4
  br label %39

33:                                               ; preds = %2
  %34 = load i32, i32* %5, align 4
  %35 = add nsw i32 304, %34
  store i32 %35, i32* %3, align 4
  br label %39

36:                                               ; preds = %2
  %37 = load i32, i32* %5, align 4
  %38 = add nsw i32 334, %37
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %36, %33, %30, %27, %24, %21, %18, %15, %12, %9, %8, %7
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
